tests/baselines/reference/labeledStatementDeclarationListInLoopNoCrash1(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
labeledStatementDeclarationListInLoopNoCrash1.ts(3,11): error TS1123: Variable declaration list cannot be empty.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== labeledStatementDeclarationListInLoopNoCrash1.ts (1 errors) ====
    for (let x of []) {
      var v0 = x;
      foo: var;
              
!!! error TS1123: Variable declaration list cannot be empty.
      (function() { return x + v0});
    }
    